# Workout-Tracker-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  workout.db
accounts/: serializers.py  tests.py  urls.py  views.py
app/: auth.py  config.py  database.py  models.py  schemas.py
app/routers/: auth.py
app/services/: auth.py
config/: config.py  settings.py  urls.py
data/: __init__.py  users.py  workouts.py
exercise/: models.py
exercise/management/commands/: seed_exercises.py
exercise/migrations/: 0001_initial.py
fake/: users.py  workouts.py
models/: users.py  workouts.py
routers/: auth.py  workouts.py
services/: users.py  workouts.py
test/unit/service/: test_workouts.py
workouts/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
workouts/management/commands/: seed_exercises.py
workouts/migrations/: 0001_initial.py  0002_workout.py  0003_comments.py
