[project]
name = "workout-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "db-sqlite3>=0.0.1",
    "fastapi[standard]>=0.135.1",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "python-decouple-stubs>=3.8.0.4",
    "ruff>=0.15.5",
    "types-passlib>=1.7.7.20260211",
    "types-python-jose>=3.5.0.20250531",
    "types-ujson>=5.10.0.20250822",
]
